[package]
name = "klystron_obj"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
klystron = { path = "../klystron" }
#klystron = { git = "https://github.com/Masterchef365/klystron.git", branch = "textures" }
obj-rs = "0.6"
anyhow = "1"
nalgebra = "0.22"

[dev-dependencies]
png = "0.16"
